[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
rand = "0.8.5"
base64 = "0.21.2"
crystals-dilithium = "1.0.0"
oqs = { version = "0.8.0", default-features = false, features = ["sigs", "kems"]}
oqs-sys = "0.8.0"
thiserror = "1.0.44"
# tempfile = "3.7.1"
der = { version = "0.7.8", features = ["derive", "oid", "pem"]}
sha2 ="0.10.7"
